--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,6 @@
             "discuss": ""
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
