--- a/js/package.json
+++ b/js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@msc/support-ai",
+  "name": "@muhammedsaidckr/support-ai",
   "private": true,
   "version": "0.0.0",
   "prettier": "@flarum/prettier-config",
